--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "d3": "^7.8.4",
     "faker": "^6.6.6",
     "js-cookie": "^3.0.5",
+    "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -27,6 +28,7 @@
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
